--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "params",
     "query string to javascript"
   ],
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -45,14 +45,13 @@
     "@babel/preset-env": "^7.4.4",
     "jest": "^24.8.0",
     "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2"
-  },
-  "dependencies": {
+    "webpack-cli": "^3.3.2",
     "@babel/core": "^7.4.4",
     "babel-jest": "^24.8.0",
     "codacy-coverage": "^3.4.0",
     "remark-cli": "^6.0.1",
     "remark-lint": "^6.0.4",
     "remark-preset-lint-recommended": "^3.0.2"
-  }
+  },
+  "dependencies": {}
 }
