--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "params",
     "query string to javascript"
   ],
-  "version": "0.1.9",
+  "version": "0.1.10",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "build": "webpack -p",
+    "build": "webpack --mode=production",
+    "build:dev": "webpack --mode=development",
     "test": "jest --coverage --coverageDirectory=coverage/jest",
     "test-with-coverage": "jest --coverage && cat ./coverage/lcov.info | ./node_modules/.bin/codacy-coverage",
     "lint-md": "remark ."
@@ -42,16 +43,15 @@
     }
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.4.4",
-    "jest": "^24.8.0",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2",
     "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "babel-jest": "^24.8.0",
     "codacy-coverage": "^3.4.0",
+    "jest": "^24.8.0",
     "remark-cli": "^6.0.1",
     "remark-lint": "^6.0.4",
-    "remark-preset-lint-recommended": "^3.0.2"
-  },
-  "dependencies": {}
+    "remark-preset-lint-recommended": "^3.0.2",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2"
+  }
 }
